Changes made to the project page document.

--- a/Portfolio/project-1.html
+++ b/Portfolio/project-1.html
@@ -22,8 +22,8 @@
         <img src="../Img/vectorstock_20681631.jpg" alt="Logo"/> 
     </div>
     <div class="header-menu">
-        <a href="index.html">Home</a>
-        <a href="#services-section">Services</a>
+        <a href="../index.html">Home</a>
+        <a href="../index.html">Services</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#experience-section">Experience</a>
         <a href="#blog-section">Blog</a>
@@ -51,10 +51,10 @@
                 <h1>LimbleMedia</h1>
                 <p>LimbleMedia is a digital agency specializing in web design, development and email marketing content creation.</p>
                 <div class="project-btn">
-                    <div class="btn"><i class="fas fa-desktop"></i>
-                        <h4>View Project</h4></div>
-                    <div class="btn"><i class="fas fa-code"></i>
-                        <h4>View Code</h4></div>
+                    <div class="btn"><a href="#"><i class="fas fa-desktop"></i>
+                        <h4>View Project</h4></a></div>
+                    <div class="btn"><a href="#"><i class="fas fa-code"></i>
+                        <h4>View Code</h4></a></div>
                 </div>
             </div>
             <div class="technologies">
