Created prjedct files.

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
           <div class="hovereffect panel image-1">
              <img class="center img-responsive" src="Img/6.png" alt="flat-design">
                   <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>Design Agency</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-1.html">Take a look</a>
                     </p>
                   </div>
           </div>
