Changes made to multiple portfolio project files.

--- a/Portfolio/project-1.html
+++ b/Portfolio/project-1.html
@@ -24,10 +24,10 @@
     <div class="header-menu">
         <a href="../index.html">Home</a>
         <a href="../index.html">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#experience-section">Experience</a>
-        <a href="#blog-section">Blog</a>
-        <a href="#testimonial-section">Testimonials</a>
+        <a href="../index.html">Portfolio</a>
+        <a href="../index.html">Experience</a>
+        <a href="../index.html">Blog</a>
+        <a href="../index.html">Testimonials</a>
     </div>
     <div class="menu-btn">
         <i class="fas fa-bars"></i>
