Changes made to responsive styles.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="hovereffect panel image-1">
              <img class="center img-responsive" src="Img/6.png" alt="flat-design">
                   <div class="overlay">
-                      <h2>Design Agency</h2>
+                      <h2>LimbleMedia</h2>
                       <p class="icon-links">
                     <a href="Portfolio/project-1.html">Take a look</a>
                     </p>
@@ -122,72 +122,72 @@
           <div class="hovereffect panel image-2">
              <img class="center img-responsive" src="Img/6.png" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>Honyst</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-2.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-3">
              <img class="center img-responsive" src="Img/6.png" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>PrimmHouse</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-3.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-4">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>UrbanGlobal</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-4.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-5">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>DigitalCitizen</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-5.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-6">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>WebGlobe</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-6.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-7">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>Data-Mind</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-7.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-8">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>Safe-Space</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-8.html">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-9">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
-                      <h2>Ecommerce</h2>
+                      <h2>Suppr</h2>
                       <p class="icon-links">
-                    <a href="#">Take a look</a>
+                    <a href="Portfolio/project-9.html">Take a look</a>
                     </p>
                   </div>
           </div>
