--- a/Portfolio/project-4.html
+++ b/Portfolio/project-4.html
@@ -35,12 +35,12 @@
 </header>
 <!-- Mobile Menu -->
 <div class="mobile-menu mobile-sticky">
-        <a href="index.html">Home</a>
-        <a href="#services-section">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#experience-section">Experience</a>
-        <a href="#blog-section">Blog</a>
-        <a href="#testimonial-section">Testimonials</a>
+        <a href="../index.html">Home</a>
+        <a href="../index.html">Services</a>
+        <a href="../index.html">Portfolio</a>
+        <a href="../index.html">Experience</a>
+        <a href="../index.html">Blog</a>
+        <a href="../index.html">Testimonials</a>
     </div>
 <!-- Project Information -->
     <section class="portfolio-project">
