--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="container">
         <div class="title">
         <div class="colored-square-2"></div>
-        <h1>Portflio</h1>
+        <h1>Portfolio</h1>
         </div>
     <div class="portfolio-container">
           <div class="hovereffect panel image-1">
