Changes made to project-1 file.

--- a/Portfolio/project-1.html
+++ b/Portfolio/project-1.html
@@ -46,14 +46,14 @@
     <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
+            <div class="project-image"><img src="../Img/LimbleMedia.png"></div>
             <div class="project-description">
                 <h1>LimbleMedia</h1>
                 <p>LimbleMedia is a digital agency specializing in web design, development and email marketing content creation.</p>
                 <div class="project-btn">
-                    <div class="btn"><a href="#"><i class="fas fa-desktop"></i>
+                    <div class="btn"><a href="https://limblemedia.com/index.html"><i class="fas fa-desktop"></i>
                         <h4>View Project</h4></a></div>
-                    <div class="btn"><a href="#"><i class="fas fa-code"></i>
+                    <div class="btn"><a href="https://github.com/ceriustech/LimbleMedia"><i class="fas fa-code"></i>
                         <h4>View Code</h4></a></div>
                 </div>
             </div>
