Change made to index file.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     <div class="portfolio-container">
           <div class="hovereffect panel image-1">
-             <img class="center img-responsive" src="Img/6.png" alt="flat-design">
+             <img class="center img-responsive" src="Img/LimbleMedia.png" alt="flat-design">
                   <div class="overlay">
                       <h2>LimbleMedia</h2>
                       <p class="icon-links">
