Added meta tags to indes.html file.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta http-equiv="x-ua-compatible" content="IE=edg, chrome=1"><!-- Display webpage in edge mode/IE 
     in highes supported document mode -->
      <meta name="keywords" content="web design, bilal masters, bilal, masters, portfolio, affordable web design, urban, urban global, urban global.net, urban freelancer, freelancer, freelancers, professional web design, web development, development, Urban, Urban Freelancer, web design company, web development company">
+    <meta property="og:url"                content="https://bilalmasters.com/" />
+    <meta property="og:title"              content="Bilal Masters" />
+    <meta property="og:description"        content="Web Developer" />
+    <meta property="og:image"              content="https://bilalmasters.com/Img/my-pic-4.jpg" /> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
