--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <html lang="en">
 <head>
     <title>Bilal Masters</title>
-
     <meta charset="utf-8"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127579971-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-127579971-1');
+    </script>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="IE=edg, chrome=1"><!-- Display webpage in edge mode/IE 
