--- a/index.html
+++ b/index.html
@@ -205,31 +205,35 @@
         <h1 class="experience_title_h1">Experience</h1>
         </div>
         <div class="experience-container">
-            <div class="hovereffect panel image-1">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+            <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
             </div>
-            <div class="hovereffect panel image-2">
+            <div class="imghvr-hinge-up panel image-2">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
             </div>
-          <div class="hovereffect panel image-3">
+          <div class=" panel image-3">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
-          <div class="hovereffect panel image-4">
+          <div class=" panel image-4">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
-          <div class="hovereffect panel image-5">
+          <div class=" panel image-5">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
-          <div class="hovereffect panel image-6">
+          <div class=" panel image-6">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
-          <div class="hovereffect panel image-7">
+          <div class=" panel image-7">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
-          <div class="hovereffect panel image-8">
+          <div class=" panel image-8">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
-          <div class="hovereffect panel image-9">
+          <div class=" panel image-9">
              <img class="center img-responsive" src="Img/4.png" alt="flat-design">
           </div>
         </div>
