Added images to file.

--- a/index.html
+++ b/index.html
@@ -207,35 +207,67 @@
         <div class="experience-container">
             <div class="experience_image_container imghvr-hinge-up panel image-1">
              <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
-            </div>
-            <div class="imghvr-hinge-up panel image-2">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
              <figcaption>
                  <h3> Hello</h3>
                  <p>Testing this out</p>
              </figcaption>
             </div>
-          <div class=" panel image-3">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
-          <div class=" panel image-4">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
-          <div class=" panel image-5">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
-          <div class=" panel image-6">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
-          <div class=" panel image-7">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
-          <div class=" panel image-8">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
-          <div class=" panel image-9">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
-          </div>
+            <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/css3-logo.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/javascript.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/jquery-logo.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/reactjs-logo-sticker.jpg" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+          <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
         </div>
     </div>
 </section>
