--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 <!-- Portfolio Section -->
 <section id="portfolio" class="section-padding">
     <div class="container">
-        <div class="title">
+        <div class="portfolio_title">
         <div class="colored-square-2"></div>
-        <h1>Portfolio</h1>
+        <h1 class="portfolio_title_h1">Portfolio</h1>
         </div>
-    <div class="portfolio-container">
+    <div class="portfolio_container">
           <div class="hovereffect panel image-1">
-             <img class="center img-responsive" src="Img/LimbleMedia.png" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/LimbleMedia.png" alt="flat-design">
                   <div class="overlay">
                       <h2>LimbleMedia</h2>
                       <p class="icon-links">
@@ -123,7 +123,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-2">
-             <img class="center img-responsive" src="Img/6.png" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/6.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Honyst</h2>
                       <p class="icon-links">
@@ -132,7 +132,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-3">
-             <img class="center img-responsive" src="Img/6.png" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/6.png" alt="flat-design">
                    <div class="overlay">
                       <h2>PrimmHouse</h2>
                       <p class="icon-links">
@@ -141,7 +141,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-4">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
                       <h2>UrbanGlobal</h2>
                       <p class="icon-links">
@@ -150,7 +150,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-5">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
                       <h2>DigitalCitizen</h2>
                       <p class="icon-links">
@@ -159,7 +159,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-6">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
                       <h2>WebGlobe</h2>
                       <p class="icon-links">
@@ -168,7 +168,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-7">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Data-Mind</h2>
                       <p class="icon-links">
@@ -177,7 +177,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-8">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Safe-Space</h2>
                       <p class="icon-links">
@@ -186,7 +186,7 @@
                   </div>
           </div>
           <div class="hovereffect panel image-9">
-             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+             <img class="center img-responsive portfolio_image" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Suppr</h2>
                       <p class="icon-links">
@@ -241,28 +241,49 @@
              </figcaption>
             </div>
           <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <img class="center img-responsive experience_image" src="Img/wordpress-logo.png" alt="flat-design">
              <figcaption>
                  <h3> Hello</h3>
                  <p>Testing this out</p>
              </figcaption>
             </div>
           <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <img class="center img-responsive experience_image" src="Img/shopify-logo.jpg" alt="flat-design">
              <figcaption>
                  <h3> Hello</h3>
                  <p>Testing this out</p>
              </figcaption>
             </div>
           <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <img class="center img-responsive experience_image" src="Img/bootstrap-logo.jpg" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+            <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/scss-logo.png" alt="flat-design">
              <figcaption>
                  <h3> Hello</h3>
                  <p>Testing this out</p>
              </figcaption>
             </div>
           <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
+             <img class="center img-responsive experience_image" src="Img/google-analytics-logo.jpg" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+            <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/git-logo.jpg" alt="flat-design">
+             <figcaption>
+                 <h3> Hello</h3>
+                 <p>Testing this out</p>
+             </figcaption>
+            </div>
+            <div class="experience_image_container imghvr-hinge-up panel image-1">
+             <img class="center img-responsive experience_image" src="Img/firebase-logo.png" alt="flat-design">
              <figcaption>
                  <h3> Hello</h3>
                  <p>Testing this out</p>
