Added new grid layout to experience section.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1 class="portfolio_title_h1">Portfolio</h1>
         </div>
     <div class="portfolio_container">
-          <div class="hovereffect panel image-1">
+          <div class="hovereffect portfolio_panel image-1">
              <img class="center img-responsive portfolio_image" src="Img/LimbleMedia.png" alt="flat-design">
                   <div class="overlay">
                       <h2>LimbleMedia</h2>
@@ -122,7 +122,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-2">
+          <div class="hovereffect portfolio_panel image-2">
              <img class="center img-responsive portfolio_image" src="Img/6.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Honyst</h2>
@@ -131,7 +131,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-3">
+          <div class="hovereffect portfolio_panel image-3">
              <img class="center img-responsive portfolio_image" src="Img/6.png" alt="flat-design">
                    <div class="overlay">
                       <h2>PrimmHouse</h2>
@@ -140,7 +140,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-4">
+          <div class="hovereffect portfolio_panel image-4">
              <img class="center img-responsive portfolio_image" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
                       <h2>UrbanGlobal</h2>
@@ -149,7 +149,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-5">
+          <div class="hovereffect portfolio_panel image-5">
              <img class="center img-responsive portfolio_image" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
                       <h2>DigitalCitizen</h2>
@@ -158,7 +158,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-6">
+          <div class="hovereffect portfolio_panel image-6">
              <img class="center img-responsive portfolio_image" src="Img/flat-design.jpg" alt="flat-design">
                    <div class="overlay">
                       <h2>WebGlobe</h2>
@@ -167,7 +167,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-7">
+          <div class="hovereffect portfolio_panel image-7">
              <img class="center img-responsive portfolio_image" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Data-Mind</h2>
@@ -176,7 +176,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-8">
+          <div class="hovereffect portfolio_panel image-8">
              <img class="center img-responsive portfolio_image" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Safe-Space</h2>
@@ -185,7 +185,7 @@
                     </p>
                   </div>
           </div>
-          <div class="hovereffect panel image-9">
+          <div class="hovereffect portfolio_panel image-9">
              <img class="center img-responsive portfolio_image" src="Img/4.png" alt="flat-design">
                    <div class="overlay">
                       <h2>Suppr</h2>
@@ -205,90 +205,51 @@
         <h1 class="experience_title_h1">Experience</h1>
         </div>
         <div class="experience-container">
-            <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/html-5-logo.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-            <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/css3-logo.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/javascript.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/jquery-logo.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/reactjs-logo-sticker.jpg" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/wordpress-logo.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/shopify-logo.jpg" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/bootstrap-logo.jpg" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-            <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/scss-logo.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-          <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/google-analytics-logo.jpg" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-            <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/git-logo.jpg" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
-            <div class="experience_image_container imghvr-hinge-up panel image-1">
-             <img class="center img-responsive experience_image" src="Img/firebase-logo.png" alt="flat-design">
-             <figcaption>
-                 <h3> Hello</h3>
-                 <p>Testing this out</p>
-             </figcaption>
-            </div>
+            <div class="hexrow">
+    <div>
+        <span>Any text you would like (that fits).</span>
+        <div></div>
+        <div></div>
+    </div>
+    <div>
+        <span>Really, change the text to say what you want!</span>
+        <div></div>
+        <div></div>
+    </div>
+    <div>
+        <span>I'm not kidding here.</span>
+        <div></div>
+        <div></div>
+    </div>
+    <div>
+        <span>Okay?</span>
+        <div></div>
+        <div></div>
+    </div>
+</div>
+
+<div class="hexrow">
+    <div>
+        <span>Did I mention you can change images? I mean, really, these are just rectangular images "cropped" to a hex shape (well, more complicated than just a crop, but the result is the same).</span>
+        <div></div>
+        <div></div>
+    </div>
+    <div>
+        <span>See, another image!</span>
+        <div></div>
+        <div></div>
+    </div>
+    <div>
+        <span>Testing opacity.</span>
+        <div></div>
+        <div></div>
+    </div>
+    <div>
+        <span>Satisfied?</span>
+        <div></div>
+        <div></div>
+    </div>
+</div>
         </div>
     </div>
 </section>
