Added more styling and logic to the experience section.

--- a/index.html
+++ b/index.html
@@ -205,51 +205,49 @@
         <h1 class="experience_title_h1">Experience</h1>
         </div>
         <div class="experience-container">
-            <div class="hexrow">
-    <div>
-        <span>Any text you would like (that fits).</span>
-        <div></div>
-        <div></div>
-    </div>
-    <div>
-        <span>Really, change the text to say what you want!</span>
-        <div></div>
-        <div></div>
-    </div>
-    <div>
-        <span>I'm not kidding here.</span>
-        <div></div>
-        <div></div>
-    </div>
-    <div>
-        <span>Okay?</span>
-        <div></div>
-        <div></div>
-    </div>
-</div>
-
-<div class="hexrow">
-    <div>
-        <span>Did I mention you can change images? I mean, really, these are just rectangular images "cropped" to a hex shape (well, more complicated than just a crop, but the result is the same).</span>
-        <div></div>
-        <div></div>
-    </div>
-    <div>
-        <span>See, another image!</span>
-        <div></div>
-        <div></div>
-    </div>
-    <div>
-        <span>Testing opacity.</span>
-        <div></div>
-        <div></div>
-    </div>
-    <div>
-        <span>Satisfied?</span>
-        <div></div>
-        <div></div>
-    </div>
-</div>
+ <ul class="container">
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+  <li class="hexa"><div class="front"></div><div class="back"></div></li>
+</ul>
         </div>
     </div>
 </section>
