--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <!-- Menu -->
-<header class="sticky" id="navbar">
+<header class="sticky header_navbar" id="navbar">
     <div class="logo">
         <img src="Img/vectorstock_20681631.jpg" alt="Logo"/> 
     </div>
