--- a/index.html
+++ b/index.html
@@ -204,50 +204,21 @@
         <div class="triangle_topright"></div>
         <h1 class="experience_title_h1">Experience</h1>
         </div>
-        <div class="experience-container">
- <ul class="container">
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back">lolol</div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-  <li class="hexa"><div class="front"></div><div class="back"></div></li>
-</ul>
+        <div class="experience_container">
+ <div class="experience_hex_grid">
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+  <div class="hexa"><div class="front"></div><div class="back">lolol</div></div>
+</div>
         </div>
     </div>
 </section>
