--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 <!-- Menu -->
@@ -68,7 +68,7 @@
         <h1>Services</h1>
         </div>
     <div class="services-container">
-                    <div class="services_panel box-1">
+                    <div id="myElement" class="services_panel box-1 panel_hover_event_1">
                         <i class="fa fa-laptop"></i>
                         <h3>Web Design</h3>
                         <p>Every design is made with your imagination. The canvas is yours to mold, which allows you to guide the layout.</p>
