Changes made to multiple files.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                <button class="caption_2 btn-5">
                        <span>
                         <p class="experience_icon"><i class="fab fa-html5"></i></p>
-                        <h3 class="text">HTML</h3>
+                        <h3 class="text_h3">HTML</h3>
                         <h4 class="experience_container_h4">Semantic mark up</h4> 
                        </span>
                        <div class="middle">
@@ -223,7 +223,7 @@
                      <button class="caption_2 btn-5">
                        <span>
                         <p class="experience_icon"><i class="fab fa-css3-alt"></i></p>
-                        <h3 class="text">CSS</h3>
+                        <h3 class="text_h3">CSS</h3>
                         <h4 class="experience_container_h4">Web page styling</h4>
                        </span>
                        <div class="middle">
@@ -235,7 +235,7 @@
                     <button class="caption_2 btn-5">
                        <span>
                         <p class="experience_icon"><i class="fab fa-js-square"></i></p>
-                        <h3 class="text">JavaScript</h3>
+                        <h3 class="text_h3">JavaScript</h3>
                         <h4 class="experience_container_h4">Web page functionality</h4> 
                        </span>
                        <div class="middle">
@@ -247,7 +247,7 @@
                     <button class="caption_2 btn-5">
                        <span>
                         <p class="experience_icon"><i class="fab fa-react"></i></p>
-                        <h3 class="text">React</h3>
+                        <h3 class="text_h3">React</h3>
                         <h4 class="experience_container_h4">Component based development</h4>
                        </span>
                        <div class="middle">
@@ -259,7 +259,7 @@
                     <button class="caption_2 btn-5">
                         <span>
                         <p class="experience_icon"><i class="fab fa-node-js"></i></p>
-                        <h3 class="text">Node</h3>
+                        <h3 class="text_h3">Node</h3>
                         <h4 class="experience_container_h4">Database connectivity</h4>    
                         </span>
                         <div class="middle">
@@ -271,7 +271,7 @@
                      <button class="caption_2 btn-5">
                        <span>
                          <p class="experience_icon"><i class="fab fa-wordpress"></i></p>
-                        <h3 class="text">Wordpress</h3>
+                        <h3 class="text_h3">Wordpress</h3>
                         <h4 class="experience_container_h4">Version control</h4>   
                        </span>
                        <div class="middle">
@@ -283,7 +283,7 @@
                     <button class="caption_2 btn-5">
                         <span>
                         <p class="experience_icon"><i class="fab fa-bootstrap"></i></p>
-                        <h3 class="text">Bootstrap</h3>
+                        <h3 class="text_h3">Bootstrap</h3>
                         <h4 class="experience_container_h4">Version control</h4>   
                         </span>
                         <div class="middle">
@@ -295,7 +295,7 @@
                     <button class="caption_2 btn-5">
                        <span>
                         <p class="experience_icon"><i class="fab fa-git"></i></p>
-                        <h3 class="text">Git</h3>
+                        <h3 class="text_h3">Git</h3>
                         <h4 class="experience_container_h4">Version control</h4> 
                        </span>
                        <div class="middle">
