Changes made to modals.

--- a/index.html
+++ b/index.html
@@ -223,13 +223,16 @@
                             
                             <!-- The Modal -->
                             <div class="myModal modal">
-
+                            <a href="javascript:void(0);" onclick="Custombox.modal.close();" class="modal_close_btn"><i class="fas fa-times"></i></a>
                           <!-- Modal content -->
                                 <div class="modal_content">
                                    <div class="modal_header">
-                                       <h2>Modal Header</h2>
+                                       <h2>HTML</h2>
                                    </div>
                                     <p>Some text in the Modal, HTML is going to be a great tool for web developemnt.Some text in the Modal, HTML is going to be a great tool for web developemnt.</p>
+                                    <div class="modal_footer">
+                                        
+                                    </div>
                                 </div>
                             </div>
                         </div>
