--- a/portfolio.html
+++ b/portfolio.html
@@ -47,15 +47,17 @@
     <div class="container">
         <div class="grid-container">
             <div class="project-image"><img src="../Img/LimbleMedia.png"></div>
-            <div class="project-description">
+            <div class="project_description">
                 <h1>LimbleMedia</h1>
                 <p>LimbleMedia is a digital agency specializing in web design, development and email marketing content creation.</p>
-                <div class="project-btn">
+                    <div class="project-btn">
                     <div class="btn"><a href="https://limblemedia.com/index.html"><i class="fas fa-desktop"></i>
-                        <h4>View Project</h4></a></div>
+                        <h4>View Project</h4></a>
+                    </div>
                     <div class="btn"><a href="https://github.com/ceriustech/LimbleMedia"><i class="fas fa-code"></i>
-                        <h4>View Code</h4></a></div>
-                </div>
+                        <h4>View Code</h4></a>
+                    </div>
+                </div>   
             </div>
             <div class="technologies">
                 <h1>Technologies Used</h1>
@@ -73,8 +75,8 @@
     <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>honyst</h1>
                 <p>Honyst  makes rental payments easier for landlords and tenants alike. Tenants are able to send payments directly to your bank account.</p>
                 <div class="project-btn">
@@ -100,8 +102,8 @@
 <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>PrimmHouse</h1>
                 <p>PrimmHouse is dedicated to helping residents and small busineses keep their home and work environments organized and clean.</p>
                 <div class="project-btn">
@@ -127,8 +129,8 @@
    <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>UrbanGlobal</h1>
                 <p>UrbanGlobal is a creative planning and implementation platform that puts community redevelopmnent into the hands of the community.</p>
                 <div class="project-btn">
@@ -154,8 +156,8 @@
     <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>DigitalCitizen</h1>
                 <p>DigitalCitizen is a platform that allows you to both interact with and manage all social media platforms .</p>
                 <div class="project-btn">
@@ -181,8 +183,8 @@
     <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>WebGlobe</h1>
                 <p>WebGlobe makes getting responsive modern websights for your business or personal use easy fast.</p>
                 <div class="project-btn">
@@ -208,8 +210,8 @@
    <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>Data-Mind</h1>
                 <p>Data-Mind is a data visualization on demand service that creates a stunning way to visualize data for presentations or personal use.</p>
                 <div class="project-btn">
@@ -235,8 +237,8 @@
     <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>Safe-Space</h1>
                 <p>Safe-Space is an open source community where members identify wanted criminals in their area which will hold a database of criminal activities and lack thereof.</p>
                 <div class="project-btn">
@@ -262,8 +264,8 @@
     <section class="portfolio-project">
     <div class="container">
         <div class="grid-container">
-            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-            <div class="project-description">
+            <div class="project-image"><img src="https://imgplaceholder.com/420x320/baa2a2/fff?text=Coming+Soon"></div>
+            <div class="project_description">
                 <h1>Suppr</h1>
                 <p>Suppr is a platform that will allow for working professionals, students or anyone too busy to create homecooked meals to order homecooked meals from other residents in their city.</p>
                 <div class="project-btn">
