Changes made to mobile menu.

--- a/index.html
+++ b/index.html
@@ -34,19 +34,26 @@
         <a href="#blog-section">Blog</a>
         <a href="#contact">Contact</a>
     </div>
-    <div class="menu-btn">
-        <i class="fas fa-bars"></i>
+    <div id="mobile_menu_icon" class="mobile_hamburger_menu_container">
+        <div class="menu_toggle menu_btn">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+     
+    <div id="mobile_menu_links" class="mobile_site_nav mobile-menu mobile-sticky">
+        <div class="mobile_site_nav_links">
+            <a href="index.html">Home</a>
+            <a href="#services-section">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#experience-section">Experience</a>
+            <a href="#blog-section">Blog</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div> 
     </div>
 
-<!-- Mobile Menu -->
-<div class="mobile-menu mobile-sticky">
-        <a href="index.html">Home</a>
-        <a href="#services-section">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#experience-section">Experience</a>
-        <a href="#blog-section">Blog</a>
-        <a href="#contact">Contact</a>
-    </div>
+
 </header>
 <!-- Top Section -->
 <section id="top">
@@ -55,7 +62,7 @@
        <div class="colored-square"></div>
         <h1 class="top_info_h1">Bilal Masters</h1>
     <p class="top_info_p">Web Developer</p>
-    <a href="#" class="top_info_a">Latest Works</a>
+    <a href="https://github.com/ceriustech" target="_blank" class="top_info_a">My GitHub<span class="top_info_icon_github"><i class="fab fa-github-square"></i></span></a>
    </div>
    <div class="img">
    <div class="background-img"></div>
