Changes made to multiple files.

--- a/PageCountdown/countdown.html
+++ b/PageCountdown/countdown.html
@@ -16,6 +16,7 @@
    <link rel="stylesheet" type="text/css" href="CSS/main.css"/>
    <!-- External CSS -->
    <link rel="stylesheet" type="text/css" href="CSS/slicknav.min.css"/>
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
    <!-- CSS Animations -->
     <link rel="stylesheet" type="text/css" href="CSS/animate.css"/> 
     <!-- Google Fonts -->
@@ -28,10 +29,11 @@
 
 <section class="landing">
     <div class="landing-inner">
-        <i class="fa fa-users" aria-hidden="true"></i>
+        <i class="fas fa-laptop-code" aria-hidden="true"></i>
         <p class="appName"><span class="primary">Techlow</span></p>
         <p class="pageMessage">A blog site for developers</p>
         <h1 class="comingsoon">Coming Soon</h1>
+        <p class="pageMessage"><a href="../index.html">Back to home</a></p>
         <div class="countdown"></div>
     </div>
 </section>
@@ -42,7 +44,7 @@
 
 
 <!-- Native JS -->
-<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
 <script type="text/javascript" src="Js/jquery.slicknav.min.js"></script>
 <script type="text/javascript" src="Js/main.js"></script>
 <script type="text/javascript" src="Js/smoothscroll.js"></script>
