--- a/portfolio.html
+++ b/portfolio.html
@@ -16,32 +16,30 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
 </head>
 <body>
-<!-- Menu -->
-<header class="sticky">
-    <div class="logo">
-        <img src="../Img/vectorstock_20681631.jpg" alt="Logo"/> 
-    </div>
-    <div class="header-menu">
-        <a href="../index.html">Home</a>
-        <a href="../index.html">Services</a>
-        <a href="../index.html">Portfolio</a>
-        <a href="../index.html">Experience</a>
-        <a href="../index.html">Blog</a>
-        <a href="../index.html">Testimonials</a>
-    </div>
-    <div class="menu-btn">
-        <i class="fas fa-bars"></i>
-    </div>
-</header>
-<!-- Mobile Menu -->
-<div class="mobile-menu mobile-sticky">
-        <a href="../index.html">Home</a>
-        <a href="../index.html">Services</a>
-        <a href="../index.html">Portfolio</a>
-        <a href="../index.html">Experience</a>
-        <a href="../index.html">Blog</a>
-        <a href="../index.html">Testimonials</a>
-    </div>
+        <header class="sticky">
+                <div class="container">
+                    <div class="logo">
+                        <img src="Img/vectorstock_20681631.jpg" alt="Bilal Masters Logo Image" />
+                    </div>
+                  
+                  <!-- Menu -->
+                  <nav class="site-nav">
+                      <ul>
+                       <li><a href="index.html">Home</a></li>
+                       <li><a href="#services-section">Services</a></li>
+                       <li><a href="#portfolio">Portfolio</a></li>
+                       <li><a href="#experience-section">Experience</a></li>
+                       <li><a href="#blog-section">Blog</a></li>
+                       <li><a href="#contact">Contact</a></li>
+                      </ul> 
+                  </nav>
+                  <!-- Mobile Menu -->
+                  <div class="menu-toggle">
+                    <div class="hamburger"></div>
+                  </div>
+                  
+                </div>
+        </header>
 <!-- Project Information Beginning-->
    <div class="container">
     <section id="portfolio_1" class="portfolio-project">
