--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="hamburger"></div>
           </div>
           <!-- Contact Modal -->
-          <div id="contact_modal">
+          <div id="contact_modal" class="contact_modal_section">
               
             <form class="contact-form animation" data-animation="zoomIn">
                 <h1 class="contact_modal_h1">Contact Me</h1>
